syntax = "proto3";

package inventorypb;

option go_package = "proto/inventorypb";

message Product {
  int32 product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock = 5;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  int32 stock = 4;
}

message GetProductRequest {
  int32 product_id = 1;
}

message UpdateProductRequest {
  int32 product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock = 5;
}

message DeleteProductRequest {
  int32 product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}
